<resources>
    <string name="app_name">GameInSchool</string>
    <string name="kakao_native_app_key">1bda287d523c81a881c20f58aaf2ddaf</string>
    <string name="kakao_app_key">kakao1bda287d523c81a881c20f58aaf2ddaf</string>

    <string name="menu_home">홈</string>
    <string name="menu_master">학습서포터</string>
    <string name="menu_monster">몬스터</string>
    <string name="menu_member">파티원</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_welcome">환영합니다.</string>
    <string name="home_number_of_class">개의 반에 등록되어 있습니다.</string>
    <string name="home_title_actionbar">깨민스쿨(Game In School) 학생용</string>
    <string name="teacher_actionbar">교사 찾기</string>
    <string name="school_monster_actionbar">과목별 활동 보기</string>
    <string name="student_actionbar">학생 랭킹 보기</string>
    <string name="teacher_class_sign_up">교사별 학급 보기</string>
    <string name="dialog_signup_class">클래스 등록하기</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="ability_leadership">리더십</string>
    <string name="ability_academical">학업력</string>
    <string name="ability_cooperation">협동성</string>
    <string name="ability_career">진로</string>
    <string name="ability_sincerity">성실성</string>
    <string name="ability_point">포인트</string>
    <string name="expected_difficulty">몬스터 등급</string>

    <string name="basic_score">0</string>
    <string name="student_detail_monster_killed">처치 몬스터 목록</string>
    <string name="dialog_select_pet">펫 등록하기</string>
    <string name="dialog_select_pet_statement">반에 등록할 펫을 선택하세요.</string>

</resources>